	* include/stralign.h: Use __CRT_STATIC_INLINE in define for
	___API_STATIC__.
	(ua_wcscpy()): Add declaration.
	* src/libcrt/wchar/swprintf.c: Remove code making swprintf non-ansi.
	* src/libcrt/wchar/vswprintf.c: Ditto.

	Timeval struct bitness issue [#2059]

	* include/sys/time.h: Use time_t instead of long for timeval.tv_sec.
	* include/winsock.h: Ditto.
	* include/winsock2.h: Ditto.

2013-09-27  Earnie Boyd  <earnie@users.sourceforge.net>

	Manage issue [#2018] and miscellaneous changes.

	* include/stdio.h: Need to include io.h for _lseeki64().
	(__SWPRINTF_DEFINED): New controlling macro for declarations.
	(_NO_MINGWEX_): Ditto.
	(swprintf, vswprintf): Declarations in ANSI format unless _NO_MINGWEX_
	defined.
	* include/wchar.h (__SWPRINTF_DEFINED, _NO_MINGWEX_, swprintf,
	vswprintf): Ditto.
	* src/libcrt/wchar/swprintf.c: New file.
	* src/libcrt/wchar/vswprintf.c: Ditto.
	* Makefile.in: Add swprintf.c and vswprintf.c compilation.
	(libmingwex.a): Add swprintf and vswprintf objects.
	* NEWS: Begin describing the changes for 4.1.

2013-09-19  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/stdio.h (_fseeki64): Remove import and create alias [#2021].
	(_ftelli64): Ditto.
	(_fseeki64_nolock): Ditto.
	(_ftelli64_nolock): Ditto.
	(_fseek_nolock): Ditto.
	(_ftell_nolock): Ditto.
	* include/unistd.h: Guard entire file not just the functions w.r.t.
	__STRICT_ANSI__ [#2046].
	* include/_mingw.h (__MINGW_MSVCR_PREREQ()): New macro to determine
	if we are using a versioned MSVCR## library.
	* include/stdlib.h (_set_invalid_parameter_handler): Guard for MSVCR80
	or greater [#2020].

2013-09-18  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/unistd.h (ftruncate()): Guard with no __STRICT_ANSI__ [#2046].
	* include/winldap.h (ldap_start_tls_s[AW]()): Incorrect signature
	[#2027].
	(ldap_stop_tls_s()): Use PLDAP instead of LDAP * per MSDN documentation.
	* include/io.h (lseek64): Use _off64_t instead of off64_t due to
	__STRICT_ANSI__ [#2024].
